implement HTML API reference autogeneration
This adds a jinja template to generate markdown files
(with lots of HTML mixed in) from YAML using the existing
interface_generator.py script.

The docs website layout files are modified to incorporate the
new documentation.

While previously Github Pages was automatically running
Jekyll on the docs folder, this commit adds a custom Github
workflow to compile and deploy the website to facilitate
the custom markdown generation step before Jekyll runs.

--- a/docs/_data/index.yaml
+++ b/docs/_data/index.yaml
@@ -3,34 +3,37 @@
 # https://jekyllrb.com/tutorials/navigation/#scenario-8-retrieving-items-based-on-front-matter-properties
 
 sections:
-  - title: For Users
+  - title: General
     docs:
       - title: Getting Started
         url: /
       - title: ODrive Tool
-        url: odrivetool
+        url: /odrivetool
       - title: Parameters & Commands
-        url: commands
+        url: /commands
       - title: Interfaces
-        url: interfaces
+        url: /interfaces
       - title: Encoders
-        url: encoders
+        url: /encoders
       - title: Homing & Endstops
-        url: endstops
+        url: /endstops
       - title: Control & Tuning
-        url: control
-      - title: Hoverboard Guide
-        url: hoverboard
+        url: /control
       - title: Troubleshooting
-        url: troubleshooting
+        url: /troubleshooting
+  - title: Tutorials
+    docs:
+      - title: Hoverboard Guide
+        url: /hoverboard
+  - title: API Reference
   - title: For ODrive Developers
     docs:
       - title: Firmware Developer Guide
-        url: developer-guide
+        url: /developer-guide
       - title: Configuring Visual Studio Code
-        url: configuring-vscode
+        url: /configuring-vscode
       - title: Configuring Eclipse
-        url: configuring-eclipse
+        url: /configuring-eclipse
   - title: Component Guides
     docs:
       - title: Motor Guide
