--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -272,8 +272,8 @@ interfaces:
               ramp_distance: float32
               accel: float32
               vel: float32
-          sensorless_ramp: LockinState
-          general_lockin: LockinState
+          sensorless_ramp: LockinConfig
+          general_lockin: LockinConfig
           can_node_id:
             type: uint32
             doc: Both axes will have the same id to start
@@ -292,7 +292,7 @@ interfaces:
       clear_errors:
         doc: Check the watchdog timer for expiration. Also sets the watchdog error bit if expired.
 
-  Axis.LockinState:
+  Axis.LockinConfig:
     c_is_class: False
     attributes:
       current:
