--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,11 @@ sudo: false
 addons:
   apt:
     packages:
-      libc6-i386
+      - libc6-i386
+      - python3
+      - python3-yaml
+      - python3-jinja2
+      - python3-jsonschema
 
 cache:
   directories:
