--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -193,8 +193,45 @@ interfaces:
         flags:
           InvalidState:
             doc: An invalid state was requested.
+            doc: |
+              You tried to run a state before you are allowed to. Typically you
+              tried to run encoder calibration or closed loop control before the
+              motor was calibrated, or you tried to run closed loop control
+              before the encoder was calibrated.
           DcBusUnderVoltage:
+            doc: |
+              Confirm that your power leads are connected securely. For initial
+              testing a 12V PSU which can supply a couple of amps should be
+              sufficient while the use of low current ‘wall wart’ plug packs may
+              lead to inconsistent behaviour and is not recommended.
+
+              You can monitor your PSU voltage using liveplotter in odrivetool
+              by entering `start_liveplotter(lambda: [odrv0.vbus_voltage])`. If
+              you see your votlage drop below `config.dc_bus_undervoltage_trip_level`
+              (default: ~ 8V) then you will trip this error. Even a relatively
+              small motor can draw multiple kW momentary and so unless you have
+              a very large PSU or are running of a battery you may encounter
+              this error when executing high speed movements with a high current
+              limit. To limit your PSU power draw you can limit your motor
+              current and/or velocity limit `controller.config.vel_limit` and
+              `motor.config.current_lim`.
           DcBusOverVoltage:
+            doc: |
+              Confirm that you have a brake resistor of the correct value
+              connected securely and that `config.brake_resistance` is set to
+              the value of your brake resistor.
+
+              You can monitor your PSU voltage using liveplotter in odrivetool
+              by entering `start_liveplotter(lambda: [odrv0.vbus_voltage])`. If
+              during a move you see the voltage rise above your PSU’s nominal
+              set voltage then you have your brake resistance set too low. This
+              may happen if you are using long wires or small gauge wires to
+              connect your brake resistor to your odrive which will added extra
+              resistance. This extra resistance needs to be accounted for to
+              prevent this voltage spike. If you have checked all your
+              connections you can also try increasing your brake resistance by
+              ~ 0.01 Ohm at a time to a maximum of 0.05 greater than your brake
+              resistor value.
           CurrentMeasurementTimeout:
           BrakeResistorDisarmed:
             doc: The brake resistor was unexpectedly disarmed.
@@ -251,7 +288,7 @@ interfaces:
           enable_step_dir:
             type: bool
             doc: Enable step/dir input after calibration.
-              For M0 this has no effect if `enable_uart` is true.
+              For M0 this has no effect if `config.enable_uart` is true.
           step_dir_always_on:
             type: bool
             doc: Keep step/dir enabled while the motor is disabled.
@@ -327,13 +364,68 @@ interfaces:
         nullflag: None
         flags:
           PhaseResistanceOutOfRange:
+            doc: |
+              During calibration the motor resistance and
+              [inductance](https://en.wikipedia.org/wiki/Inductance) is measured.
+              If the measured motor resistance or inductance falls outside a set
+              range this error will be returned. Check that all motor leads are
+              connected securely.
+
+              The measured values can be viewed using odrivetool as is shown below:
+              ```
+              In [2]: odrv0.axis0.motor.config.phase_inductance
+              Out[2]: 1.408751450071577e-05
+
+              In [3]: odrv0.axis0.motor.config.phase_resistance
+              Out[3]: 0.029788672924041748
+              ```
+              Some motors will have a considerably different phase resistance
+              and inductance than this. For example, gimbal motors, some small
+              motors (e.g. < 10A peak current). If you think this applies to you
+              try increasing `config.resistance_calib_max_voltage` from
+              its default value of 1 using odrivetool and repeat the motor
+              calibration process. If your motor has a small peak current draw
+              (e.g. < 20A) you can also try decreasing
+              `config.calibration_current` from its default value of 10A.
+
+              In general, you need
+              ```text
+              resistance_calib_max_voltage > calibration_current * phase_resistance
+              resistance_calib_max_voltage < 0.5 * vbus_voltage
+              ```
           PhaseInductanceOutOfRange:
+            doc: |
+              See `PhaseResistanceOutOfRange` for details.
           AdcFailed:
           DrvFault:
+            doc: |
+              The ODrive v3.4 is known to have a hardware issue whereby the
+              motors would stop operating when applying high currents to M0. The
+              reported error of both motors in this case is `ERROR_DRV_FAULT`.
+
+              The conjecture is that the high switching current creates large
+              ripples in the power supply of the DRV8301 gate driver chips, thus
+              tripping its under-voltage fault detection.
+
+              To resolve this issue you can limit the M0 current to 40A. The
+              lowest current at which the DRV fault was observed is 45A on one
+              test motor and 50A on another test motor. Refer to
+              [this post](https://discourse.odriverobotics.com/t/drv-fault-on-odrive-v3-4/558)
+              for instructions for a hardware fix.
           ControlDeadlineMissed:
           NotImplementedMotorType:
           BrakeCurrentOutOfRange:
           ModulationMagnitude:
+            doc: |
+              The bus voltage was insufficent to push the requested current
+              through the motor.
+              If you are getting this during motor calibration, make sure that
+              `config.resistance_calib_max_voltage` is no more than half
+              your bus voltage.
+
+              For gimbal motors, it is recommended to set the
+              `config.calibration_current` and `config.current_lim`
+              to half your bus voltage, or less.
           BrakeDeadtimeViolation:
           UnexpectedTimerCallback:
           CurrentSenseSaturation:
@@ -450,6 +542,18 @@ interfaces:
         nullflag: None
         flags:
           Overspeed:
+            doc: |
+              Try increasing `config.vel_limit`. The default of 20,000 encoder
+              counts per second gives a motor speed of only ~146 RPM with the
+              common CUI-AMT102 8192 count per rotation encoder. Note: Even if
+              you do not commanded your motor to exceed `config.vel_limit`
+              sudden changes in the load placed on a motor may cause this speed
+              to be temporarily exceeded, resulting in this error.
+
+              You can also try increasing `config.vel_limit_tolerance`. The
+              default value of 1.2 means it will only allow a 20% violation of
+              the speed limit. You can set the `config.vel_limit_tolerance` to 0
+              to disable the check altogether.
           InvalidInputMode:
           UnstableGain:
           InvalidMirrorAxis:
@@ -535,10 +639,27 @@ interfaces:
         flags:
           UnstableGain:
           CprPolepairsMismatch:
+            doc: |
+              Confirm you have entered the correct count per rotation (CPR) for
+              [your encoder](https://docs.odriverobotics.com/encoders). The
+              ODrive uses your supplied value for the motor pole pairs to
+              measure the CPR. So you should also double check this value.
+
+              Note that the AMT encoders are configurable using the micro-
+              switches on the encoder PCB and so you may need to check that
+              these are in the right positions. If your encoder lists its pulse
+              per rotation (PPR) multiply that number by four to get CPR.
           NoResponse:
+            doc: |
+              Confirm that your encoder is plugged into the right pins on the
+              ODrive board.
           UnsupportedEncoderMode:
           IllegalHallState:
           IndexNotFoundYet:
+            doc: |
+              Check that your encoder is a model that has an index pulse. If
+              your encoder does not have a wire connected to pin Z on your
+              ODrive then it does not output an index pulse.
           AbsSpiTimeout:
           AbsSpiComFail:
           AbsSpiNotReady:
@@ -635,26 +756,54 @@ valuetypes:
       Undefined:
         doc: will fall through to idle
       Idle:
-        doc: disable PWM and do nothing
+        brief: Disable motor PWM and do nothing.
       StartupSequence:
-        doc: the actual sequence is defined by the config.startup... flags
+        brief: Run the startup procedure.
+        doc: the actual sequence is defined by the `config`.startup... flags
       FullCalibrationSequence:
-        doc: run all calibration procedures, then idle
+        doc: Run motor calibration and then encoder offset calibration (or encoder
+          index search if `<axis>.encoder.config.use_index` is `True`).
       MotorCalibration:
-        doc: run motor calibration
+        brief: Measure phase resistance and phase inductance of the motor.
+        doc: |
+           * To store the results set `motor.config.pre_calibrated` to `True`
+           and save the configuration (`save_configuration()`). After that you
+           don't have to run the motor calibration on the next start up.
+           * This modifies the variables `motor.config.phase_resistance` and
+           `motor.config.phase_inductance`.
       SensorlessControl:
-        doc: run sensorless control
+        brief: Run sensorless control.
+        doc: |
+           * The motor must be calibrated (`motor.is_calibrated`)
+           * `controller.config.control_mode` must be `True`.
       EncoderIndexSearch:
-        doc: run encoder index search
+        brief: Turn the motor in one direction until the encoder index is traversed.
+        doc: This state can only be entered if `encoder.config.use_index` is `True`.
       EncoderOffsetCalibration:
-        doc: run encoder offset calibration
+        brief: Turn the motor in one direction for a few seconds and then back to measure the offset between the encoder position and the electrical phase.
+        doc: |
+           * Can only be entered if the motor is calibrated (`motor.is_calibrated`).
+           * A successful encoder calibration will make the `encoder.is_ready`
+           go to true.
       ClosedLoopControl:
-        doc: run closed loop control
+        brief: Run closed loop control.
+        doc: |
+           * The action depends on the `controller.config.control_mode`.
+           * Can only be entered if the motor is calibrated
+           (`motor.is_calibrated`) and the encoder is ready (`encoder.is_ready`).
       LockinSpin:
-        doc: run lockin spin
+        brief: Run lockin spin.
+        doc: |
+          Can only be entered if the motor is calibrated (`motor.is_calibrated`)
+          or the motor direction is unspecified (`motor.config.direction` == 1)
       EncoderDirFind:
+        brief: Run encoder direction search.
+        doc: |
+          Can only be entered if the motor is calibrated (`motor.is_calibrated`).
       Homing:
-        doc: run axis homing function
+        brief: Run axis homing function.
+        doc:
+          Endstops must be enabled to use this feature.
 
   ODrive.Encoder.Mode:
     values:
@@ -676,6 +825,7 @@ valuetypes:
       # Note: these should be sorted from lowest level of control to
       # highest level of control, to allow "<" style comparisons.
       VoltageControl:
+        doc: this one is not normally used
       CurrentControl:
       VelocityControl:
       PositionControl:
@@ -683,14 +833,96 @@ valuetypes:
   ODrive.Controller.InputMode:
     values:
       Inactive:
+        brief: Disable inputs. Setpoints retain their last value.
       Passthrough:
-      VelRamp:
-      PosFilter:
-      MixChannels:
-      TrapTraj:
-      CurrentRamp:
-      Mirror:
+        brief: Pass `input_xxx` through to `xxx_setpoint` directly.
+        doc: |
+          ### Valid Inputs:
+          * `input_pos`
+          * `input_vel`
+          * `input_current`
 
+          ### Valid Control modes:
+          * `CONTROL_MODE_VOLTAGE_CONTROL`
+          * `CONTROL_MODE_CURRENT_CONTROL`
+          * `CONTROL_MODE_VELOCITY_CONTROL`
+          * `CONTROL_MODE_POSITION_CONTROL`
+      VelRamp:
+        brief: Ramps a velocity command from the current value to the target value.
+        doc: |
+          ### Configuration Values:
+          * `config.vel_ramp_rate` [cpr/sec]
+          * `config.inertia` [A/(count/s^2))]
+
+          ### Valid inputs:
+          * `input_vel`
+
+          ### Valid Control Modes:
+          * `CONTROL_MODE_VELOCITY_CONTROL`
+      PosFilter:
+        brief: Implements a 2nd order position tracking filter.
+        doc: |
+          Intended for use with step/dir interface, but can also be used with
+          position-only commands.
+
+          ![POS Filter Response](../secondOrderResponse.PNG)
+          Result of a step command from 1000 to 0
+
+          ### Configuration Values:
+          * `config.input_filter_bandwidth`
+          * `config.inertia`
+
+          ### Valid inputs:
+          * `input_pos`
+
+          ### Valid Control modes:
+          * `CONTROL_MODE_POSITION_CONTROL`
+      MixChannels:
+        brief: Not Implemented.
+      TrapTraj:
+        brief: Implementes an online trapezoidal trajectory planner.
+        doc: |
+          ![Trapezoidal Planner Response](../TrapTrajPosVel.PNG)
+
+          ### Configuration Values:
+          * `trap_traj.config.vel_limit`
+          * `trap_traj.config.accel_limit`
+          * `trap_traj.config.decel_limit`
+          * `config.inertia`
+
+          ### Valid Inputs:
+          * `input_pos`
+
+          ### Valid Control Modes:
+          * `CONTROL_MODE_POSITION_CONTROL`
+      CurrentRamp:
+        brief: Ramp a current command from the current value to the target value.
+        doc: |
+          ### Configuration Values:
+          * `config.current_ramp_rate`
+
+          ### Valid Inputs:
+          * `input_current`
+
+          ### Valid Control Modes:
+          * `CONTROL_MODE_CURRENT_CONTROL`
+      Mirror:
+        brief: Implements "electronic mirroring".
+        doc: |
+          This is like electronic camming, but you can only mirror exactly the
+          movements of the other motor, according to a fixed ratio.
+
+          [![](http://img.youtube.com/vi/D4_vBtyVVzM/0.jpg)](http://www.youtube.com/watch?v=D4_vBtyVVzM "Example Mirroring Video")
+
+          ### Configuration Values
+          * `config.axis_to_mirror`
+          * `config.mirror_ratio`
+
+          ### Valid Inputs
+          * None.  Inputs are taken directly from the other axis encoder estimates
+
+          ### Valid Control modes
+          * `CONTROL_MODE_POSITION_CONTROL`
 
   ODrive.Motor.MotorType:
     values:
