Modified docs and communication interfaces to reflect change from A to Nm for motor control input. Renamed vel_integrator_current_ to vel_integrator_torque_ Removed input_current_ from controller, added input_torque_

--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -461,13 +461,12 @@ interfaces:
           InvalidEstimate:
       input_pos: {type: float32, c_setter: set_input_pos}
       input_vel: float32
-      input_current: float32
       input_torque: float32
       pos_setpoint: readonly float32
       vel_setpoint: readonly float32
       torque_setpoint: readonly float32
       trajectory_done: readonly bool
-      vel_integrator_current: float32
+      vel_integrator_torque: float32
       anticogging_valid: bool
       config:
         c_is_class: False
@@ -681,7 +680,7 @@ valuetypes:
       # Note: these should be sorted from lowest level of control to
       # highest level of control, to allow "<" style comparisons.
       VoltageControl:
-      CurrentControl:
+      TorqueControl:
       VelocityControl:
       PositionControl:
 
