Un-removed custom setter for input_pos_ removed explicit casts where variables would be promoted anyway

--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -596,6 +596,7 @@ interfaces:
       input_pos:
         type: float32
         unit: rad
+        c_setter: set_input_pos
       input_vel:
         type: float32
         unit: rad/s
